// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
.emotion-6 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-6 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 2.875rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-5 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-6"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-5"
  >
    <a
      class="emotion-3"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-3"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders null when data is null 1`] = `null`;

exports[`<Header /> renders null when data is undefined 1`] = `null`;

exports[`<Header /> renders when \`email\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 2.875rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-3"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`github\` & \`email\` is \`null\` 1`] = `
.emotion-3 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-3 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-3 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 2.875rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-3"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
</header>
`;

exports[`<Header /> renders when \`github\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 2.875rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-3 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-3"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`name\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 2.875rem;
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 1.75rem;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<header
  class="emotion-5"
>
  <h2
    class="emotion-0"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-1"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`role\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 1.75rem;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h3
    class="emotion-1"
  >
    hire me
  </h3>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;

exports[`<Header /> renders when \`status\` is \`null\` 1`] = `
.emotion-5 {
  background-color: rgb(216,234,204);
  padding-top: 4rem;
  padding-bottom: 4rem;
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
}

@media screen and (min-width:40em) {
  .emotion-5 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

@media screen and (min-width:40em) {
  .emotion-5 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

.emotion-1 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-1 {
    font-size: 2.875rem;
  }
}

.emotion-4 {
  grid-column: center-start/center-end;
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  margin-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

<header
  class="emotion-5"
>
  <h1
    class="emotion-0"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-1"
  >
    Senior Front-End Engineer
  </h2>
  <div
    class="emotion-4"
  >
    <a
      class="emotion-2"
      href="a@a.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      Email
    </a>
    <a
      class="emotion-2"
      href="github"
      rel="noopener noreferrer"
      target="_blank"
    >
      GitHub
    </a>
  </div>
</header>
`;
